changed border to box-shadow to avoid double border on divs that are touching

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -5,16 +5,14 @@ body {
 .menu {
   width: 15%;
   border-right: solid black 1px;
-  position:fixed;
-  position:absolute;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   text-align: center;
-  display: block;
+  // display: block;
 }
-
 
 .editor {
   width: 85%;
@@ -27,5 +25,10 @@ body {
 .sector {
   height: 50px;
   width: 50px;
-  border: 1px black solid;
+  box-shadow:
+    1px 0 0 0 black,
+    0 1px 0 0 black,
+    1px 1px 0 0 black,
+    1px 0 0 0 black inset,
+    0 1px 0 0 black inset;
 }
